--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-alabaster @ file:///home/ktietz/src/ci/alabaster_1611921544520/work
+﻿alabaster @ file:///home/ktietz/src/ci/alabaster_1611921544520/work
 appdirs==1.4.4
 APScheduler==3.6.3
 argh==0.26.2
@@ -55,73 +55,17 @@ nbformat @ file:///tmp/build/80754af9/nbformat_1610738111109/work
 nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
 numpydoc @ file:///tmp/build/80754af9/numpydoc_1605117425582/work
 packaging @ file:///tmp/build/80754af9/packaging_1611952188834/work
-pandocfilters @ file:///tmp/build/80754af9/pandocfilters_1605120460739/work
 parso==0.7.0
 pathspec==0.7.0
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
 pluggy==0.13.1
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1602688806899/work
-psutil @ file:///tmp/build/80754af9/psutil_1612298023621/work
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pycodestyle @ file:///home/ktietz/src/ci_mi/pycodestyle_1612807597675/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-pydocstyle @ file:///tmp/build/80754af9/pydocstyle_1598885001695/work
-pyflakes @ file:///home/ktietz/src/ci_ipy2/pyflakes_1612551159640/work
-Pygments @ file:///tmp/build/80754af9/pygments_1613849567472/work
-pylint @ file:///tmp/build/80754af9/pylint_1614007998847/work
-pyls-black @ file:///tmp/build/80754af9/pyls-black_1607553132291/work
-pyls-spyder @ file:///tmp/build/80754af9/pyls-spyder_1613849700860/work
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1608057966937/work
-pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
-pyrsistent @ file:///tmp/build/80754af9/pyrsistent_1600141720057/work
-PySocks @ file:///tmp/build/80754af9/pysocks_1605305779399/work
-python-dateutil @ file:///home/ktietz/src/ci/python-dateutil_1611928101742/work
-python-jsonrpc-server @ file:///tmp/build/80754af9/python-jsonrpc-server_1600278539111/work
-python-language-server @ file:///tmp/build/80754af9/python-language-server_1607972495879/work
 python-telegram-bot==13.3
-pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
-pyxdg @ file:///tmp/build/80754af9/pyxdg_1603822279816/work
 PyYAML==5.4.1
 pyzmq==20.0.0
 QDarkStyle==2.8.1
-QtAwesome @ file:///tmp/build/80754af9/qtawesome_1602272867890/work
-qtconsole @ file:///tmp/build/80754af9/qtconsole_1612458529756/work
 QtPy==1.9.0
-regex @ file:///tmp/build/80754af9/regex_1606772724491/work
-requests @ file:///tmp/build/80754af9/requests_1608241421344/work
-rope @ file:///tmp/build/80754af9/rope_1602264064449/work
 Rtree==0.9.4
-SecretStorage @ file:///tmp/build/80754af9/secretstorage_1614022784285/work
 sip==4.19.13
-six @ file:///tmp/build/80754af9/six_1605205327372/work
-snowballstemmer @ file:///tmp/build/80754af9/snowballstemmer_1611258885636/work
-sortedcontainers @ file:///tmp/build/80754af9/sortedcontainers_1606865132123/work
-Sphinx @ file:///tmp/build/80754af9/sphinx_1614023429948/work
-sphinxcontrib-applehelp @ file:///home/ktietz/src/ci/sphinxcontrib-applehelp_1611920841464/work
-sphinxcontrib-devhelp @ file:///home/ktietz/src/ci/sphinxcontrib-devhelp_1611920923094/work
-sphinxcontrib-htmlhelp @ file:///home/ktietz/src/ci/sphinxcontrib-htmlhelp_1611920974801/work
-sphinxcontrib-jsmath @ file:///home/ktietz/src/ci/sphinxcontrib-jsmath_1611920942228/work
-sphinxcontrib-qthelp @ file:///home/ktietz/src/ci/sphinxcontrib-qthelp_1611921055322/work
-sphinxcontrib-serializinghtml @ file:///home/ktietz/src/ci/sphinxcontrib-serializinghtml_1611920755253/work
-spyder @ file:///tmp/build/80754af9/spyder_1612462739642/work
-spyder-kernels @ file:///tmp/build/80754af9/spyder-kernels_1614030590686/work
-testpath @ file:///home/ktietz/src/ci/testpath_1611930608132/work
-textdistance @ file:///tmp/build/80754af9/textdistance_1612461398012/work
-three-merge @ file:///tmp/build/80754af9/three-merge_1607553261110/work
-toml @ file:///tmp/build/80754af9/toml_1592853716807/work
-tornado @ file:///tmp/build/80754af9/tornado_1606942300299/work
-traitlets @ file:///home/ktietz/src/ci/traitlets_1611929699868/work
-typed-ast @ file:///tmp/build/80754af9/typed-ast_1610484547928/work
-typing-extensions @ file:///home/ktietz/src/ci_mi/typing_extensions_1612808209620/work
 tzlocal==2.1
-ujson @ file:///tmp/build/80754af9/ujson_1611259522456/work
-urllib3 @ file:///tmp/build/80754af9/urllib3_1611694770489/work
-watchdog @ file:///tmp/build/80754af9/watchdog_1612471027849/work
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
 webencodings==0.5.1
 Werkzeug==1.0.1
 wrapt==1.12.1
-wurlitzer @ file:///tmp/build/80754af9/wurlitzer_1594753850195/work
-yapf @ file:///tmp/build/80754af9/yapf_1593528177422/work
-zipp @ file:///tmp/build/80754af9/zipp_1604001098328/work
