--- a/requirements.txt
+++ b/requirements.txt
@@ -1,170 +1,30 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-_libgcc_mutex=0.1=main
-alabaster=0.7.12=pyhd3eb1b0_0
-appdirs=1.4.4=py_0
-apscheduler=3.6.3=pypi_0
-argh=0.26.2=py38_0
-astroid=2.5=py38h06a4308_1
-async_generator=1.10=pyhd3eb1b0_0
-atomicwrites=1.4.0=py_0
-attrs=20.3.0=pyhd3eb1b0_0
-autopep8=1.5.5=pyhd3eb1b0_0
-babel=2.9.0=pyhd3eb1b0_0
-backcall=0.2.0=pyhd3eb1b0_0
-black=19.10b0=py_0
-bleach=3.3.0=pyhd3eb1b0_0
-brotlipy=0.7.0=py38h27cfd23_1003
-ca-certificates=2021.1.19=h06a4308_0
-certifi=2020.12.5=py38h06a4308_0
-cffi=1.14.5=py38h261ae71_0
-chardet=4.0.0=py38h06a4308_1003
-click=7.1.2=pyhd3eb1b0_0
-cloudpickle=1.6.0=py_0
-colorama=0.4.4=pyhd3eb1b0_0
-cryptography=3.3.1=py38h3c74f83_1
-dbus=1.13.18=hb2f20db_0
-decorator=4.4.2=pyhd3eb1b0_0
-defusedxml=0.6.0=pyhd3eb1b0_0
-diff-match-patch=20200713=py_0
-docutils=0.16=py38_1
-entrypoints=0.3=py38_0
-expat=2.2.10=he6710b0_2
-flake8=3.8.4=py_0
-flask=1.1.2=pypi_0
-fontconfig=2.13.1=h6c09931_0
-freetype=2.10.4=h5ab3b9f_0
-future=0.18.2=py38_1
-glib=2.67.4=h36276a3_1
-gst-plugins-base=1.14.0=h8213a91_2
-gstreamer=1.14.0=h28cd5cc_2
-icu=58.2=he6710b0_3
-idna=2.10=pyhd3eb1b0_0
-imagesize=1.2.0=pyhd3eb1b0_0
-importlib-metadata=2.0.0=py_1
-importlib_metadata=2.0.0=1
-intervaltree=3.1.0=py_0
-ipykernel=5.3.4=py38h5ca1d4c_0
-ipython=7.20.0=py38hb070fc8_1
-ipython_genutils=0.2.0=pyhd3eb1b0_1
-isort=5.7.0=pyhd3eb1b0_0
-itsdangerous=1.1.0=pypi_0
-jedi=0.17.2=py38h06a4308_1
-jeepney=0.6.0=pyhd3eb1b0_0
-jinja2=2.11.3=pyhd3eb1b0_0
-jpeg=9b=h024ee3a_2
-jsonschema=3.2.0=py_2
-jupyter_client=6.1.7=py_0
-jupyter_core=4.7.1=py38h06a4308_0
-jupyterlab_pygments=0.1.2=py_0
-keyring=22.0.1=py38h06a4308_0
-lazy-object-proxy=1.5.2=py38h27cfd23_0
-ld_impl_linux-64=2.33.1=h53a641e_7
-libedit=3.1.20191231=h14c3975_1
-libffi=3.3=he6710b0_2
-libgcc-ng=9.1.0=hdf63c60_0
-libpng=1.6.37=hbc83047_0
-libsodium=1.0.18=h7b6447c_0
-libspatialindex=1.9.3=he6710b0_0
-libstdcxx-ng=9.1.0=hdf63c60_0
-libuuid=1.0.3=h1bed415_2
-libxcb=1.14=h7b6447c_0
-libxml2=2.9.10=hb55368b_3
-markupsafe=1.1.1=py38h7b6447c_0
-mccabe=0.6.1=py38_1
-mistune=0.8.4=py38h7b6447c_1000
-mypy_extensions=0.4.3=py38_0
-nbclient=0.5.2=pyhd3eb1b0_0
-nbconvert=6.0.7=py38_0
-nbformat=5.1.2=pyhd3eb1b0_1
-ncurses=6.2=he6710b0_1
-nest-asyncio=1.5.1=pyhd3eb1b0_0
-numpydoc=1.1.0=pyhd3eb1b0_1
-openssl=1.1.1j=h27cfd23_0
-packaging=20.9=pyhd3eb1b0_0
-pandoc=2.11=hb0f4dca_0
-pandocfilters=1.4.3=py38h06a4308_1
-parso=0.7.0=py_0
-pathspec=0.7.0=py_0
-pcre=8.44=he6710b0_0
-pexpect=4.8.0=pyhd3eb1b0_3
-pickleshare=0.7.5=pyhd3eb1b0_1003
-pip=21.0.1=py38h06a4308_0
-pluggy=0.13.1=py38_0
-prompt-toolkit=3.0.8=py_0
-psutil=5.8.0=py38h27cfd23_1
-ptyprocess=0.7.0=pyhd3eb1b0_2
-pycodestyle=2.6.0=pyhd3eb1b0_0
-pycparser=2.20=py_2
-pydocstyle=5.1.1=py_0
-pyflakes=2.2.0=pyhd3eb1b0_0
-pygments=2.8.0=pyhd3eb1b0_0
-pylint=2.7.0=py38h06a4308_1
-pyls-black=0.4.6=hd3eb1b0_0
-pyls-spyder=0.3.2=pyhd3eb1b0_0
-pyopenssl=20.0.1=pyhd3eb1b0_1
-pyparsing=2.4.7=pyhd3eb1b0_0
-pyqt=5.9.2=py38h05f1152_4
-pyrsistent=0.17.3=py38h7b6447c_0
-pysocks=1.7.1=py38h06a4308_0
-python=3.8.5=h7579374_1
-python-dateutil=2.8.1=pyhd3eb1b0_0
-python-jsonrpc-server=0.4.0=py_0
-python-language-server=0.36.2=pyhd3eb1b0_0
-python-telegram-bot=13.3=pypi_0
-pytz=2021.1=pyhd3eb1b0_0
-pyxdg=0.27=pyhd3eb1b0_0
-pyyaml=5.4.1=py38h27cfd23_1
-pyzmq=20.0.0=py38h2531618_1
-qdarkstyle=2.8.1=py_0
-qt=5.9.7=h5867ecd_1
-qtawesome=1.0.1=py_0
-qtconsole=5.0.2=pyhd3eb1b0_0
-qtpy=1.9.0=py_0
-readline=8.1=h27cfd23_0
-regex=2020.11.13=py38h27cfd23_0
-requests=2.25.1=pyhd3eb1b0_0
-rope=0.18.0=py_0
-rtree=0.9.4=py38_1
-secretstorage=3.3.1=py38h06a4308_0
-setuptools=52.0.0=py38h06a4308_0
-sip=4.19.13=py38he6710b0_0
-six=1.15.0=py38h06a4308_0
-snowballstemmer=2.1.0=pyhd3eb1b0_0
-sortedcontainers=2.3.0=pyhd3eb1b0_0
-sphinx=3.5.1=pyhd3eb1b0_0
-sphinxcontrib-applehelp=1.0.2=pyhd3eb1b0_0
-sphinxcontrib-devhelp=1.0.2=pyhd3eb1b0_0
-sphinxcontrib-htmlhelp=1.0.3=pyhd3eb1b0_0
-sphinxcontrib-jsmath=1.0.1=pyhd3eb1b0_0
-sphinxcontrib-qthelp=1.0.3=pyhd3eb1b0_0
-sphinxcontrib-serializinghtml=1.1.4=pyhd3eb1b0_0
-spyder=4.2.1=py38h06a4308_1
-spyder-kernels=1.10.2=py38h06a4308_0
-sqlite=3.33.0=h62c20be_0
-testpath=0.4.4=pyhd3eb1b0_0
-textdistance=4.2.1=pyhd3eb1b0_0
-three-merge=0.1.1=pyhd3eb1b0_0
-tk=8.6.10=hbc83047_0
-toml=0.10.1=py_0
-tornado=6.1=py38h27cfd23_0
-traitlets=5.0.5=pyhd3eb1b0_0
-typed-ast=1.4.2=py38h27cfd23_1
-typing_extensions=3.7.4.3=pyha847dfd_0
-tzlocal=2.1=pypi_0
-ujson=4.0.2=py38h2531618_0
-urllib3=1.26.3=pyhd3eb1b0_0
-watchdog=1.0.2=py38h06a4308_1
-wcwidth=0.2.5=py_0
-webencodings=0.5.1=py38_1
-werkzeug=1.0.1=pypi_0
-wheel=0.36.2=pyhd3eb1b0_0
-wrapt=1.12.1=py38h7b6447c_1
-wurlitzer=2.0.1=py38_0
-xz=5.2.5=h7b6447c_0
-yaml=0.2.5=h7b6447c_0
-yapf=0.30.0=py_0
-zeromq=4.3.3=he6710b0_3
-zipp=3.4.0=pyhd3eb1b0_0
-zlib=1.2.11=h7b6447c_3
+appdirs==1.4.4
+APScheduler==3.6.3
+argh==0.26.2
+atomicwrites==1.4.0
+black==19.10b0
+brotlipy==0.7.0
+certifi==2020.12.5
+docutils==0.16
+entrypoints==0.3
+Flask==1.1.2
+future==0.18.2
+itsdangerous==1.1.0
+MarkupSafe==1.1.1
+mccabe==0.6.1
+mistune==0.8.4
+mypy-extensions==0.4.3
+parso==0.7.0
+pathspec==0.7.0
+pluggy==0.13.1
+python-telegram-bot==13.3
+PyYAML==5.4.1
+pyzmq==20.0.0
+QDarkStyle==2.8.1
+QtPy==1.9.0
+Rtree==0.9.4
+sip==4.19.13
+tzlocal==2.1
+webencodings==0.5.1
+Werkzeug==1.0.1
+wrapt==1.12.1
