--- a/requirements.txt
+++ b/requirements.txt
@@ -16,13 +16,12 @@ mistune==0.8.4
 mypy-extensions==0.4.3
 parso==0.7.0
 pathspec==0.7.0
-pluggy==0.13.1
 python-telegram-bot==13.3
 PyYAML==5.4.1
 pyzmq==20.0.0
 QDarkStyle==2.8.1
 QtPy==1.9.0
-Rtree==0.9.4
+Rtree>=0.9.4
 sip==4.19.13
 tzlocal==2.1
 webencodings==0.5.1
