--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,3 @@
-appdirs==1.4.4
-APScheduler==3.6.3
-argh==0.26.2
-atomicwrites==1.4.0
-black==19.10b0
-brotlipy==0.7.0
-certifi==2020.12.5
-docutils==0.16
-entrypoints==0.3
 Flask==1.1.2
-future==0.18.2
-itsdangerous==1.1.0
-MarkupSafe==1.1.1
-mccabe==0.6.1
-mistune==0.8.4
-mypy-extensions==0.4.3
-parso==0.7.0
-pathspec==0.7.0
 python-telegram-bot==13.3
-PyYAML==5.4.1
-pyzmq==20.0.0
-QDarkStyle==2.8.1
-QtPy==1.9.0
-Rtree>=0.9.0
-sip==4.19.13
-tzlocal==2.1
-webencodings==0.5.1
-Werkzeug==1.0.1
-wrapt==1.12.1
+requests==2.25.1
